fix overflow issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -27,7 +27,6 @@
 * {
 	font-family: 'Comfortaa';
 	font-weight: 300;
-  overflow-x: hidden;
 }
 
 h3{
